--- a/public/css/style.css
+++ b/public/css/style.css
@@ -331,6 +331,11 @@ body {
 	background: url("../img/mother-child.jpg") no-repeat top -380px center;
 }
 
+#links .section-title {
+	padding: 200px 0;
+	background: url("../img/family.jpg") no-repeat top -350px center;
+}
+
 #map {
 	opacity: .6;
 	height: 300px;
